# ahoi-serial-lib

./: .gitmodules  CMakeLists.txt  config.cmake  zlog.conf
cmake/: GitAddSubmodule.cmake
include/ahoi_serial/: common_defs.h  core.h  receiver.h  sender.h
include/priv/: security.h
include/pub/: ahoilib.h
include/pub/ahoi_serial/: ahoi_defs.h  cmd.h  com.h  core.h  receiver.h  sender.h
patches/: ascon-fix.patch
src/ahoi_commons/: CMakeLists.txt  core.c  security.c
src/ahoi_core/: CMakeLists.txt  cmd.c  com.c  core.c  security.c
src/ahoi_receiver/: CMakeLists.txt  receiver.c
src/ahoi_sender/: CMakeLists.txt  sender.c
tests/: CMakeLists.txt  security_test.c  send_rcv_test.c  test_example.c  test_utils.c  test_utils.h
